[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UIController.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.32549 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -1.0
margin_top = 2.0
margin_right = 229.0
margin_bottom = 1260.0
custom_styles/panel = SubResource( 1 )

[node name="GridWidthSlider" type="HSlider" parent="Panel"]
margin_left = 47.0
margin_top = 57.0
margin_right = 152.0
margin_bottom = 80.0
min_value = 1.0
value = 2.0

[node name="GridWidthLabel" type="Label" parent="Panel"]
margin_left = 64.0
margin_top = 40.0
margin_right = 133.0
margin_bottom = 54.0
text = "Grid Width"

[node name="GridHeightSlider" type="HSlider" parent="Panel"]
margin_left = 47.0
margin_top = 111.0
margin_right = 152.0
margin_bottom = 134.0
min_value = 1.0
value = 2.0

[node name="GridHeightLabel" type="Label" parent="Panel"]
margin_left = 69.0
margin_top = 95.0
margin_right = 138.0
margin_bottom = 109.0
text = "Grid Height"

[node name="ScaleSlider" type="HSlider" parent="Panel"]
margin_left = 48.0
margin_top = 159.0
margin_right = 153.0
margin_bottom = 187.0

[node name="ScaleLabel" type="Label" parent="Panel"]
margin_left = 81.0
margin_top = 149.0
margin_right = 121.0
margin_bottom = 163.0
text = "Scale"

[node name="HeigthScaleSlider" type="HSlider" parent="Panel"]
margin_left = 49.0
margin_top = 211.0
margin_right = 154.0
margin_bottom = 239.0

[node name="HeigthScaleLabel" type="Label" parent="Panel"]
margin_left = 64.0
margin_top = 199.0
margin_right = 143.0
margin_bottom = 213.0
text = "Heigth Scale"

[node name="OffsetXSlider" type="HSlider" parent="Panel"]
margin_left = 51.0
margin_top = 261.0
margin_right = 156.0
margin_bottom = 289.0
max_value = 1000.0

[node name="OffsetXLabel" type="Label" parent="Panel"]
margin_left = 73.0
margin_top = 248.0
margin_right = 130.0
margin_bottom = 262.0
text = "Offset X"

[node name="OffsetZSlider" type="HSlider" parent="Panel"]
margin_left = 51.0
margin_top = 314.0
margin_right = 156.0
margin_bottom = 342.0
max_value = 1000.0

[node name="OffsetZLabel" type="Label" parent="Panel"]
margin_left = 77.0
margin_top = 305.0
margin_right = 125.0
margin_bottom = 319.0
text = "OffsetZ"

[connection signal="value_changed" from="Panel/GridWidthSlider" to="." method="onGridWidthSliderValueChange"]
[connection signal="value_changed" from="Panel/GridHeightSlider" to="." method="onGridHeigthSliderValueChange"]
[connection signal="value_changed" from="Panel/ScaleSlider" to="." method="onScaleValueChange"]
[connection signal="value_changed" from="Panel/HeigthScaleSlider" to="." method="onHeigthScaleSliderValueChange"]
[connection signal="value_changed" from="Panel/OffsetXSlider" to="." method="onOffsetXSliderValueChange"]
[connection signal="value_changed" from="Panel/OffsetZSlider" to="." method="onOffsetZSliderValueChange"]
